--- a/server/package.json
+++ b/server/package.json
@@ -9,10 +9,13 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3"
   },
-  "devDependencies": {},
+  "devDependencies": {
+      "nodemon": "^2.0.15"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --max-http-header-size=16384 app.js"
+    "start": "node --max-http-header-size=16384 app.js",
+    "watch": "nodemon --max-http-header-size=16384 app.js"
   },
   "author": "",
   "license": "ISC"
