--- a/.travis.yml
+++ b/.travis.yml
@@ -17,11 +17,22 @@ jobs:
       script:
       - docker run -e CI=true pokedock-client npm run test
 
-      # deploy:
-      #   provider: elasticbeanstalk
-      #   region: "eu-west-2"
-      #   app: "pokedock-client"
-      #   env: "Pokedock-client-env"
+      before_deploy:
+        - cd ./client
+      after_deploy:
+        - cd ..
+      deploy:
+        provider: elasticbeanstalk
+        region: "eu-west-2"
+        app: "pokedock-client"
+        env: "pokedock-client"
+        on:
+          branch: master
+        access_key: $AWS_ACCESS_KEY
+        secret_access_key: $AWS_SECRET_KEY
+        bucket_name: "elasticbeanstalk-eu-west-2-175975253570"
+        bucket_path: "pokedock-client"
+        skip_cleanup: true
 
     - name: 'Test Server'  
       services:
@@ -33,9 +44,20 @@ jobs:
       script:
       - docker run -e CI=true pokedock-server npm run test
 
-      # deploy:
-      #   provider: elasticbeanstalk
-      #   region: "eu-west-2"
-      #   app: "pokedock-client"
-      #   env: "Pokedock-client-env"
+      before_deploy:
+        - cd ./server
+      after_deploy:
+        - cd ..
+      deploy:
+        provider: elasticbeanstalk
+        region: "eu-west-2"
+        app: "pokedock-server"
+        env: "pokedock-server"
+        on:
+          branch: master
+        access_key: $AWS_ACCESS_KEY
+        secret_access_key: $AWS_SECRET_KEY
+        bucket_name: "elasticbeanstalk-eu-west-2-175975253570"
+        bucket_path: "pokedock-server"
+        skip_cleanup: true
 
