--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ jobs:
         env: "pokedock-client"
         on:
           branch: master
-        access_key: "$AWS_ACCESS_KEY"
+        access_key_id: "$AWS_ACCESS_KEY"
         secret_access_key: "$AWS_SECRET_KEY"
         bucket: "elasticbeanstalk-eu-west-2-175975253570"
         bucket_path: "pokedock-client"
@@ -55,7 +55,7 @@ jobs:
         env: "pokedock-server"
         on:
           branch: master
-        access_key: "$AWS_ACCESS_KEY"
+        access_key_id: "$AWS_ACCESS_KEY"
         secret_access_key: "$AWS_SECRET_KEY"
         bucket: "elasticbeanstalk-eu-west-2-175975253570"
         bucket_path: "pokedock-server"
