Ensure build is available for copy into Nginx image

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -4,11 +4,11 @@ WORKDIR '/app'
 
 COPY package.json .
 
-RUN npm install
+RUN npm install --production
 
 COPY . .
 
-CMD ["npm", "start"]
+CMD ["npm", "run", "build"]
 
 FROM nginx
 
