--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -4,14 +4,8 @@ WORKDIR '/app'
 
 COPY package.json .
 
-RUN npm install
+RUN npm install --production
 
 COPY . .
 
-CMD ["npm", "start"]
-
-FROM nginx
-
-EXPOSE 80
-
-COPY --from=builder /app/build /usr/share/nginx/html
+RUN npm start
